--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
+    background-color: white;
 }
 
 .flex-container > div {
@@ -17,3 +17,34 @@
     text-align: center;
     font-family: 'Alegreya', serif;
 }
+
+.topnav {
+    overflow: hidden;
+    background-color:white;
+  }
+  
+  .topnav a {
+    float: center;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color:white;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  @media screen and (max-width: 600px) {
+      .topnav a {
+          text-align: center;
+          float: none;
+      }
+  }
