--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     background-color: white;
+    position: float;
 }
 
 .flex-container > div {
@@ -19,32 +20,25 @@
 }
 
 .topnav {
+    background-color: white;
     overflow: hidden;
-    background-color:white;
-  }
-  
-  .topnav a {
+}
+
+.topnav a {
     float: center;
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14 px 16px;
     text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color:white;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
+    font-size: 20px;
+}
 
-  @media screen and (max-width: 600px) {
-      .topnav a {
-          text-align: center;
-          float: none;
-      }
-  }
+@media screen and (max-width: 600px) {
+    .topnav a{
+        width: 600 px;
+        display: block;
+        padding: 12 px;
+        text-align: center;
+        float: none;
+    }
+}
